--- a/README.adoc
+++ b/README.adoc
@@ -19,7 +19,7 @@ npm install
 npm run build
 ----
 
-The build artifacts will be stored in the `dist/` directory. Use the `--prod` flag for a production build.
+The build artifacts will be stored in the `dist/` directory.
 
 == Development server
 
